// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter should filter multi series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
    ],
  },
]
`;

exports[`filter should filter single series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 5,
        "b": 0,
      },
    ],
  },
]
`;

exports[`flatMap should flatMap multi series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 0,
        "b": 10,
        "c": -10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": -7,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": -4,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": -1,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 2,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 0,
        "b": 10,
        "c": -10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": -7,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": -4,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": -1,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 2,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 0,
        "b": 10,
        "c": -10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": -7,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": -4,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": -1,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 2,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
]
`;

exports[`flatMap should flatMap single series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 0,
        "b": 10,
        "c": -10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": -7,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": -4,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": -1,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 2,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
]
`;

exports[`groupBy should group by key 1`] = `
Array [
  Object {
    "group": Object {
      "type": "a",
    },
    "values": Array [
      Object {
        "type": "a",
        "y": 0,
      },
      Object {
        "type": "a",
        "y": 1,
      },
      Object {
        "type": "a",
        "y": 2,
      },
      Object {
        "type": "a",
        "y": 3,
      },
      Object {
        "type": "a",
        "y": 3,
      },
      Object {
        "type": "a",
        "y": 2,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 10,
      },
      Object {
        "type": "b",
        "y": 8,
      },
      Object {
        "type": "b",
        "y": 6,
      },
      Object {
        "type": "b",
        "y": 4,
      },
      Object {
        "type": "b",
        "y": 2,
      },
      Object {
        "type": "b",
        "y": 0,
      },
    ],
  },
]
`;

exports[`groupBy should perform multiple group by key 1`] = `
Array [
  Object {
    "group": Object {
      "type": "a",
      "y": 0,
    },
    "values": Array [
      Object {
        "type": "a",
        "y": 0,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "a",
      "y": 1,
    },
    "values": Array [
      Object {
        "type": "a",
        "y": 1,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "a",
      "y": 2,
    },
    "values": Array [
      Object {
        "type": "a",
        "y": 2,
      },
      Object {
        "type": "a",
        "y": 2,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "a",
      "y": 3,
    },
    "values": Array [
      Object {
        "type": "a",
        "y": 3,
      },
      Object {
        "type": "a",
        "y": 3,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 0,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 0,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 2,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 2,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 4,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 4,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 6,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 6,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 8,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 8,
      },
    ],
  },
  Object {
    "group": Object {
      "type": "b",
      "y": 10,
    },
    "values": Array [
      Object {
        "type": "b",
        "y": 10,
      },
    ],
  },
]
`;

exports[`map should map multi series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
]
`;

exports[`map should map single series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
        "c": 10,
      },
      Object {
        "a": 1,
        "b": 8,
        "c": 9,
      },
      Object {
        "a": 2,
        "b": 6,
        "c": 8,
      },
      Object {
        "a": 3,
        "b": 4,
        "c": 7,
      },
      Object {
        "a": 4,
        "b": 2,
        "c": 6,
      },
      Object {
        "a": 5,
        "b": 0,
        "c": 5,
      },
    ],
  },
]
`;

exports[`mapSeries should map series 1`] = `
Array [
  Object {
    "index": 0,
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 5,
        "b": 0,
      },
    ],
  },
  Object {
    "index": 1,
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 5,
        "b": 0,
      },
    ],
  },
  Object {
    "index": 2,
    "values": Array [
      Object {
        "a": 0,
        "b": 10,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 5,
        "b": 0,
      },
    ],
  },
]
`;

exports[`sort should sort multi series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
]
`;

exports[`sort should sort single series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
]
`;

exports[`sortBy should sortBy multi series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
]
`;

exports[`sortBy should sortBy single series 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 5,
        "b": 0,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 2,
        "b": 6,
      },
      Object {
        "a": 1,
        "b": 8,
      },
      Object {
        "a": 0,
        "b": 10,
      },
    ],
  },
]
`;
